# plant-cam

./: .dockerignore  .gitignore  Dockerfile  app.py  config.json  docker-compose.yaml  environment.py  example_config.json  main.py  pyproject.toml  timelapse.py
plant_cam/: Dockerfile  pyproject.toml  requirements.txt  settings.json
plant_cam/src/: app.py  config.json  take_pictures.py  testscript.py
plant_cam/src/templates/: GET_POST.html  index.html
src/: main.py
static/: script.js
templates/: index.html
