[project]
name = "horticapture"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "flask-apscheduler>=1.13.1",
    "picamera2>=0.3.23",
    "python-dotenv>=1.0.1",
    "rpi-bme280>=0.2.4",
    "ruff>=0.8.6",
    "schedule>=1.2.2",
]
